# andromedatoolcallingagent

./: .dockerignore  .env.example  .env.frontend.example  .gitignore  AgentWorkflow.md  Dockerfile  LICENSE  README.md  SETUP_GUIDE.md  SecurityReadOnly.md  langgraph.json  prototypeRAG.md  pyproject.toml  railway.json  server.py  setup.sh  start.sh  streamlit_ui.py  vercel.json
docs/: GITHUB_SETUP.md  PROJECT_STRUCTURE.md
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vercel.json  vite.config.ts  vite.reportsPlugin.ts
frontend/src/: App.tsx  config.ts  index.css  types.ts  vite-env.d.ts
frontend/src/components/: ActivityLog.tsx  AgentConfigForm.tsx  AgentHeader.tsx  ChannelForm.tsx  ConnectionDiagnostic.tsx  ConnectionPanel.tsx  ResultsDashboard.tsx  WorkflowPipeline.tsx
frontend/src/hooks/: useAgentRun.ts  useServerHealth.ts
frontend/src/lib/: agentClient.ts  defaultSettings.ts  runSession.ts  (+4 more)
models/: README.md
scripts/: download_embedding_model.py  export_store_schema.py  seed_business_rag.py  seed_store_database.py  services.sh
src/: demo_email_processing.py  gmail_agent.py  process_emails_comprehensive.py  verify_email_setup.py
src/agent/: __init__.py  async_utils.py  embeddings.py  graph.py  pdf_analysis.py  report_planning.py  routing.py  task_planner.py  workflow_executor.py
tests/integration_tests/: test_db_safety_guard_llm.py  test_graph.py
tests/unit_tests/: test_batch_calculator.py  test_business_rag.py  test_calculator_tools.py  test_database_tools.py  test_db_readonly_security_regression.py  test_db_safety_agent.py  test_email_tools.py  test_file_search.py  test_gmail_agent.py  test_gmail_inbox_tools.py  test_location_tools.py  test_pdf_analysis.py  test_report_planning.py  test_research_workflow.py  test_routing.py  test_sql_readonly_validator.py  test_store_tool_loop.py  test_task_planner.py  test_web_search.py
(+14 files in other folders)
