[project]
name = "andromeda-agent"
version = "0.1.0"
description = "Multi-tool LangGraph agent with calculator, web search, file search, PDF, and email."
authors = [
    { name = "Muhammad Qasim Shabbir", email = "muhammadqasimshabbir3@gmail.com" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.0.0",
    "python-dotenv>=1.0.1",
    "langchain>=0.1.0",
    "langchain-groq>=0.1.0",
    "langchain-community>=0.1.0",
    "duckduckgo-search>=6.0.0",
    "requests>=2.31.0",
    "reportlab>=4.0.0",
    "beautifulsoup4>=4.12.0",
    "sympy>=1.12",
    "streamlit>=1.28.0",
    "ddgs>=9.0.0",
]


[project.optional-dependencies]
dev = ["mypy>=1.11.1",
       "ruff>=0.6.1",
    "langgraph-cli[inmem]>=0.4.14",
]
ui = ["streamlit>=1.28.0"]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["langgraph.templates.agent", "agent"]
[tool.setuptools.package-dir]
"langgraph.templates.agent" = "src/agent"
"agent" = "src/agent"


[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    # We actually do want to import from typing_extensions
    "UP035",
    # Relax the convention by _not_ requiring documentation for every function parameter.
    "D417",
    "E501",
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
[tool.ruff.lint.pydocstyle]
convention = "google"

[dependency-groups]
dev = [
    "anyio>=4.7.0",
    "langgraph-cli[inmem]>=0.4.14",
    "mypy>=1.13.0",
    "pytest>=9.0.3",
    "ruff>=0.8.2",
]
